<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        app:fragment="com.skysam.hchirinos.myfinances.ajustesModule.ui.SettingsActivity$PreferenciasFragment"
        app:icon="@drawable/ic_preferencias_white_24"
        app:key="preferencias_header"
        app:title="@string/preferencias_header" />

    <PreferenceCategory app:title="Perfil">
        <Preference
            app:icon="@drawable/ic_update_pass_24"
            app:key="actualizar_pass_header"
            app:title="@string/actualizar_pass_header" />

        <Preference
            app:icon="@drawable/ic_cerrar_sesion_24"
            app:key="cerrar_sesion_header"
            app:title="@string/cerrar_sesion" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/acerca">
        <PreferenceScreen
            android:icon="@drawable/ic_baseline_code_24"
            app:title="@string/acerca_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.skysam.hchirinos.myfinances.ui.activityGeneral.AcercaActivity"
                android:targetPackage="com.skysam.hchirinos.myfinances" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>