<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_totales">

    <fragment
        android:id="@+id/nav_totales"
        android:name="com.skysam.hchirinos.myfinances.graficosModule.ui.TotalesGraphFragment"
        android:label="@string/label_nav_totales"
        tools:layout="@layout/fragment_totales_graph" />

    <fragment
        android:id="@+id/nav_ingresos"
        android:name="com.skysam.hchirinos.myfinances.graficosModule.ui.IngresosGraphFragment"
        android:label="@string/menu_ingresos"
        tools:layout="@layout/fragment_ingresos_graph" />

    <fragment
        android:id="@+id/nav_ahorros"
        android:name="com.skysam.hchirinos.myfinances.graficosModule.ui.AhorrosGraphFragment"
        android:label="@string/menu_ahorros"
        tools:layout="@layout/fragment_ahorros_graph" />

    <fragment
        android:id="@+id/nav_prestamos"
        android:name="com.skysam.hchirinos.myfinances.graficosModule.ui.PrestamosGraphFragment"
        android:label="@string/menu_prestamos"
        tools:layout="@layout/fragment_prestamos_graph" />

    <fragment
        android:id="@+id/nav_gastos"
        android:name="com.skysam.hchirinos.myfinances.graficosModule.ui.GastosGraphFragment"
        android:label="@string/menu_egresos"
        tools:layout="@layout/fragment_gastos_graph" />

    <fragment
        android:id="@+id/nav_deudas"
        android:name="com.skysam.hchirinos.myfinances.graficosModule.ui.DeudasGraphFragment"
        android:label="@string/menu_deudas"
        tools:layout="@layout/fragment_deudas_graph" />


</navigation>